--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -2,7 +2,11 @@ FROM php:7.4-fpm
 
 RUN docker-php-ext-install pdo_mysql
 
-RUN pecl install apcu-5.1.8
+RUN pecl install apcu
+RUN apt-get update && \
+     apt-get install -y \
+         libzip-dev \
+         && docker-php-ext-install zip
 
 RUN apt-get update && \
 apt-get install -y \
